--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="Keywords" content="" >
 <meta name="Description" content="" >
 <META http-equiv=X-UA-Compatible content=IE=EmulateIE7>
-<META http-equiv=Content-Type content="text/html; charset=gb2312">
+<META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META content="MSHTML 6.00.3790.4807" name=GENERATOR>
 <LINK href="/favicon.ico" rel="shortcut icon">
 <LINK rel="stylesheet" href="css/style.css" type="text/css" />
