--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" <HTML xmlns="http://www.w3.org/1999/xhtml">
-<HEAD>
+<HEAD lang="en">
 <title>郑州法鼎法律咨询有限公司</title>
 <meta name="Keywords" content="" >
+
 <meta name="Description" content="" >
 <META http-equiv=X-UA-Compatible content=IE=EmulateIE7>
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
+<meta charset="UTF-8">
 <META content="MSHTML 6.00.3790.4807" name=GENERATOR>
 <LINK href="/favicon.ico" rel="shortcut icon">
 <LINK rel="stylesheet" href="css/style.css" type="text/css" />
