--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <LINK href="/favicon.ico" rel="shortcut icon">
 <LINK href="/favicon.ico" rel="shortcut icon">
 <LINK rel="stylesheet" href="css/style.css" type="text/css" />
-<script type="text/javascript" src="js/jquery_min.js"></script>
+<!--<script type="text/javascript" src="js/jquery_min.js"></script>-->
 <script type="text/javascript" src="js/slider.js"></script>
-<script type="text/javascript" src="js/scroll.js"></script>
+<!--<script type="text/javascript" src="js/scroll.js"></script>-->
 <!-- page.baidu.com/www.jtsgflw.com/4d959_7560_i.html Baidu tongji analytics -->
 
 <!-- lawyerxin.cn Baidu tongji analytics -->
