--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <LINK href="/favicon.ico" rel="shortcut icon">
 <LINK href="/favicon.ico" rel="shortcut icon">
 <LINK rel="stylesheet" href="css/style.css" type="text/css" />
-<!--<script type="text/javascript" src="js/jquery_min.js"></script>-->
+<script type="text/javascript" src="js/jquery_min.js"></script>
 <script type="text/javascript" src="js/slider.js"></script>
-<!--<script type="text/javascript" src="js/scroll.js"></script>-->
+<script type="text/javascript" src="js/scroll.js"></script>
 <!-- page.baidu.com/www.jtsgflw.com/4d959_7560_i.html Baidu tongji analytics -->
 
 <!-- lawyerxin.cn Baidu tongji analytics -->
-<script>
+<!--<script>
 var _hmt = _hmt || [];
 (function() {
 var hm = document.createElement("script");
@@ -25,7 +25,7 @@ hm.src = "//hm.baidu.com/hm.js?0d3be105dc8ac3570eeed9e280c0eb91";
 var s = document.getElementsByTagName("script")[0];
 s.parentNode.insertBefore(hm, s);
 })();
-</script>
+</script>-->
 
 
 </head>
