--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <META http-equiv=X-UA-Compatible content=IE=EmulateIE7>
 <META http-equiv=Content-Type content="text/html; charset=gb2312">
 <META content="MSHTML 6.00.3790.4807" name=GENERATOR>-->-->
-<LINK href="/favicon.ico" rel="shortcut icon">
-<LINK href="/favicon.ico" rel="shortcut icon">
+<!--<LINK href="/favicon.ico" rel="shortcut icon">
+<LINK href="/favicon.ico" rel="shortcut icon">-->
 <LINK rel="stylesheet" href="css/style.css" type="text/css" />
 <script type="text/javascript" src="js/jquery_min.js"></script>
 <script type="text/javascript" src="js/slider.js"></script>
