--- a/index.html
+++ b/index.html
@@ -27,7 +27,17 @@ s.parentNode.insertBefore(hm, s);
 })();
 </script>-->
 
-
+<script type="text/javascript"> 
+window.onload=function() 
+{ 
+  var olink=document.getElementById("link"); 
+  olink.onclick=function() 
+  { 
+    if(confirm("敬请期待")){alert("OK");} 
+    return false; 
+  } 
+} 
+</script>
 </head>
 
 <body>
