--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@ s.parentNode.insertBefore(hm, s);
 
 <script type="text/javascript">
 function fun(){
-    if (confirm("敬请期待"))
-         return false;
+	alert("敬请期待")
+	return;
+    <!--if (confirm("敬请期待"))-->
+         <!--return false;-->
+		 
 }
 </script>
 </head>
