--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ s.parentNode.insertBefore(hm, s);
 <script type="text/javascript">
 function fun(){
 	alert("敬请期待")
-	return;
+	return false;
     <!--if (confirm("敬请期待"))-->
          <!--return false;-->
 		 
